fixed layout issues

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,18 +1,22 @@
 .site-header {
+  width: 100%;
   min-width: 480px;
   background-color: rgb(71, 33, 22);
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.mat-toolbar-row {
-  height: auto;
-  padding: 10px;
+mat-toolbar mat-toolbar-row {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .site-header h1 {
-  display: inline-block;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   max-width: 300px;
   min-width: 200px;
 }
@@ -26,10 +30,13 @@ h1 button {
   background-color: rgba(71, 33, 22, 1);
 }
 
-.site-header nav {
+.site-header .mat-toolbar-row div {
+  width: 100%;
   flex-grow: 1;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .site-header nav ul {
@@ -69,10 +76,3 @@ h1 button {
   background-color: rgba(71, 33, 22, 1);
   color: white;
 }
-
-
-.menu-spacer {
-  flex: 1 1 auto;
-}
-
-
